<resources>
    <string name="app_name">Shipper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">

    </string>
    <string name="hotline">1900 636 908</string>
    <string name="unit">đ</string>
    <string name="title_donhang">ĐƠN HÀNG CỦA TÔI</string>
    <string name="title_updatedonhang">CẬP NHẬT ĐƠN HÀNG</string>
    <string name="title_taixe">HỒ SƠ CỦA TÔI</string>
    <string name="title_notify">THÔNG BÁO</string>
    <string name="title_money">VÍ CỦA TÔI</string>
    <string name="title_refer_code">MÃ GIỚI THIỆU</string>
    <string name="inputNotComplete">Vui lòng nhập số điện thoại</string>
    <string name="alert_title_login">ĐĂNG NHẬP</string>
    <string name="alert_message_login">Bạn có muốn đăng ký với số điện thoại này không?</string>
    <string name="copy_right">Copyright by <b>One Ship JSC</b></string>
    <string name="register">ĐĂNG KÝ THAM GIA</string>
    <string name="name">Họ tên</string>
    <string name="phone">Số điện thoại</string>
    <string name="phone_login">Mời nhập số điện thoại</string>
    <string name="invite_code">Mã giới thiệu (nếu có)</string>
    <string name="term_header">Bằng việc đăng ký, tôi đồng ý với </string>
    <string name="link_term"><font color="blue">điều khoản sử dụng</font> của <b>One Ship JSC</b></string>
    <string name="title_term">ĐIỀU KHOẢN SỬ DỤNG</string>
    <string name="noti_register">Cảm ơn bạn đã đăng kí trở thành tài xế của 1Ship.\n 1Ship sẽ liên hệ với bạn trong thời gian sớm nhất.\n Hotline: 1900 636 908</string>
    <string name="reg_invalid">Chưa điền thông tin!</string>
    <string name="text_invalid">Biển số xe không có ký tự đặt biệt!</string>
    <string name="min_phone_invalid">Điền ít nhất 10 số!</string>
    <string name="email_invalid">Email không hợp lệ!</string>
    <string name="check_email_invalid">Email đã tồn tại trong hệ thống!</string>
    <string name="add_information">Bổ sung thông tin</string>
    <string name="add_information_note">Để xác nhận tài khoản đăng kí lái xe là hợp  pháp, xin vui lòng cung cấp những hình ảnh sau để chứng thực tài khoản</string>
    <string name="vehicles">Loại phương tiện</string>
    <string name="license_plates">Biển số xe</string>
    <string name="vehicle_photos">Ảnh xe</string>
    <string name="vehicle_photos_note">(Chụp ảnh xe rõ biển số)</string>
    <string name="your_photos">Ảnh của bạn</string>
    <string name="your_photos_note">(Hình ảnh rõ ràng, chụp thẳng mặt)</string>
    <string name="license">Bằng lái</string>
    <string name="license_note">(Chụp rõ tên &amp; số bằng)</string>
    <string name="identity_card">Chứng minh thư</string>
    <string name="identity_card_note">(Chụp rõ tên &amp; dấu vân tay)</string>
    <string name="confirm">Xác nhận</string>
    <string name="confirm_note">Mã xác nhận đã được gửi qua tin nhắn của bạn, điền mã số để tiếp tục</string>
    <string name="confirm_code">Mã xác nhận</string>
    <string name="activated">Kích hoạt</string>
    <string name="mess_not_received">Chưa nhận được tin nhắn?</string>
    <string name="btLogin">ĐĂNG NHẬP</string>
    <string name="btRegister">Chưa có tài khoản? Đăng ký ngay</string>
    <string name="btNext">TIẾP TỤC</string>
    <string name="btFinish">XONG</string>
    <string name="btFaceBook">Đăng ký qua Facebook</string>
    <string name="btGoogle">Đăng ký qua Google</string>
    <string name="message_dialog_update_now">Bạn có chắc đã hoàn thành công việc của các đơn hàng được chọn không?</string>
    <string name="ago">trước</string>
    <string name="day">ngày</string>
    <string name="days">ngày</string>
    <string name="month">tháng</string>
    <string name="months">tháng</string>
    <string name="year">năm</string>
    <string name="years">năm</string>
    <string name="hour">giờ</string>
    <string name="hours">giờ</string>
    <string name="minute">phút</string>
    <string name="minutes">phút</string>
    <string name="second">giây</string>
    <string name="seconds">giây</string>
    <string name="toggle_on">On</string>
    <string name="toggle_off">Off</string>
    <string name="receive">NHẬN</string>
    <string name="dismiss">BỎ QUA</string>
    <string name="not_receiver">KHÔNG NHẬN</string>
    <string name="select_all">Chọn tất cả</string>
    <string name="undo">HOÀN TÁC</string>
    <string name="update_dh">CẬP NHẬT</string>
    <string name="update_now">CẬP NHẬT NHANH</string>
    <string name="refuse">TỪ CHỐI</string>
    <string name="edit_dh">CHỈNH SỬA</string>
    <string name="stop">điểm dừng</string>
    <string name="order">ĐƠN HÀNG #</string>
    <string name="twice_back">Nhấn BACK 2 lần để thoát</string>
    <string name="totle_fee">Tổng tiền: </string>
    <string name="delete">XÓA</string>
    <string name="donhang_tab1">Đơn hàng mới</string>
    <string name="donhang_tab2">Chưa hoàn thành</string>
    <string name="donhang_tab3">Đã hoàn thành</string>
    <string name="donhang_tab4">Đã hủy</string>
    <string name="work">CÔNG VIỆC</string>
    <string name="image">HÌNH ẢNH</string>
    <string name="note">GHI CHÚ</string>
    <string name="note_mutiline">Ghi chú...</string>
    <string name="finish">Hoàn thành</string>
    <string name="unfinished">Chưa hoàn thành</string>
    <string name="add_image">THÊM HÌNH</string>
    <string name="change">THAY ĐỔI</string>
    <string name="done">XONG</string>
    <string name="reason_mutiltext">Lý do...</string>
    <string name="btnOk">Ok</string>
    <string name="btnCancle">Hủy</string>
    <string name="message_remove_image">Bạn muốn xóa hình này chứ?</string>
    <string name="other">Khác</string>
    <string name="error_not_status">Bạn chưa chọn trạng thái!</string>
    <string name="orderdetail_tab1">Thông tin giao nhận</string>
    <string name="orderdetail_tab2">Hàng hóa/dịch vụ</string>
    <string name="orderdetail_tab3">Tổng chi phí</string>
    <string name="orderdetail_tab4">Tình trạng</string>
    <string name="start">Start</string>
    <string name="item_result">Kết quả</string>
    <string name="item_place">Địa điểm</string>
    <string name="item_work">Công việc</string>
    <string name="item_order_code">Bill</string>
    <string name="trust">TRUST</string>
    <string name="untrust">UNTRUST</string>
    <string name="sender_info">THÔNG TIN NGƯỜI GỬI</string>
    <string name="reveicer_info">THÔNG TIN NGƯỜI NHẬN</string>
    <string name="shipper_info">THÔNG TIN NGƯỜI VẬN CHUYỂN</string>
    <string name="map">BẢN ĐỒ</string>
    <string name="confirm_code_delivery">Mã xác thực</string>
    <string name="call">Gọi</string>
    <string name="adress">Địa chỉ</string>
    <string name="intend_time_send">Thời gian dự kiến gửi</string>
    <string name="intend_time_receive">Thời gian dự kiến nhận</string>
    <string name="shipper">Người vận chuyển</string>
    <string name="email">Địa chỉ email</string>
    <string name="curator">Người phụ trách</string>
    <string name="id_shipper">ID</string>
    <string name="view_map">Xem lộ trình</string>
    <string name="title_activity_maps">Map</string>
    <string name="fee_ship">Tiền ship:</string>
    <string name="fee_cod">Tiền ứng trước(COD)</string>
    <string name="goods_content">NỘI DUNG HÀNG HÓA</string>
    <string name="goods_size">KÍCH THƯỚC/KHỐI LƯỢNG</string>
    <string name="added_service">DỊCH VỤ GIA TĂNG</string>
    <string name="goods_type">Loại hàng hóa</string>
    <string name="goods_value">Giá trị hàng</string>
    <string name="content">Nội dung</string>
    <string name="number">Số lượng</string>
    <string name="total_size">Tổng khối lượng</string>
    <string name="size">Kích thước (D x R x C) (cm)</string>
    <string name="ship_service_type">Loại dịch vụ vận chuyển</string>
    <string name="packing">Đóng gói</string>
    <string name="packing_box">Đóng thùng</string>
    <string name="packing_stoke">Đóng kiện</string>
    <string name="packaging">Bao bì</string>
    <string name="insurrance">Bảo hiểm</string>
    <string name="point_start">ĐIỂM BẮT ĐẦU</string>
    <string name="point_stop">ĐIỂM DỪNG</string>
    <string name="point_end">ĐIỂM KẾT THÚC</string>
    <string name="ship_60_minute">Ship 60 phút</string>
    <string name="s60_minute">60 phút</string>
    <string name="ship_in_day">Ship trong ngày</string>
    <string name="in_day">Trong ngày</string>
    <string name="distance">Khoảng cách:</string>
    <string name="cod_sender">Thu người gửi:</string>
    <string name="cod_receiver">Thu người nhận:</string>
    <string name="collecting_receiver">THU NGƯỜI NHẬN</string>
    <string name="collecting_sender">THU NGƯỜI GỬI</string>
    <string name="fee_detail">CHI TIẾT CƯỚC</string>
    <string name="freight_fee">Cước vận chuyển</string>
    <string name="added_service_fee">Cước dịch vụ cộng thêm</string>
    <string name="total_revenue">Số tiền thu hộ</string>
    <string name="main_fee">Cước chính (1)</string>
    <string name="sub_fee">Phụ phí (2)</string>
    <string name="cod_fee">Phí thu hộ</string>
    <string name="extra_fee">Chi phí khác</string>
    <string name="added_service_fee3">Cước dịch vụ cộng thêm (3)</string>
    <string name="total_revenue4">Cước thu hộ (4)</string>
    <string name="total_fee">Tổng cước (1 + 2 + 3 + 4)</string>
    <string name="vat">VAT</string>
    <string name="total">Tổng thu</string>
    <string name="total_fee_shipk">Tổng tiền</string>
    <string name="toolbar_hoso">HỒ SƠ CỦA TÔI</string>
    <string name="driver_name">Họ tên</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="old">34 tuổi</string>
    <string name="district">Quận 10</string>
    <string name="statistic">99</string>
    <string name="complete_order">Đơn hàng hoàn thành</string>
    <string name="level_member">Cấp độ thành viên</string>
    <string name="score">Điểm thưởng</string>
    <string name="trust_number">25</string>
    <string name="trusted">TRUSTED</string>
    <string name="Untrusted">UNTRUSTED</string>
    <string name="change_text">THAY ĐỔI</string>
    <string name="address_house">Địa chỉ cư ngụ</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="account_number">Số TK ngân hàng</string>
    <string name="email_address">Địa chỉ email</string>
    <string name="chung_minh_thu">Chứng minh thư</string>
    <string name="drive_car">Bằng lái xe</string>
    <string name="moto_insurance">Giấy bảo hiểm xe</string>
    <string name="vehicle">Phương tiện</string>
    <string name="exit">ĐĂNG XUẤT</string>
    <string name="changed_imagecmnd">Thay đổi</string>
    <string name="changed_info">THAY ĐỔI THÔNG TIN</string>
    <string name="back">QUAY LẠI</string>
    <string name="not_yet">Chưa có</string>
    <string name="sex">Giới tính</string>
    <string name="birthday">Ngày sinh</string>
    <string name="update_myprofile_success">Cập nhật hồ sơ thành công</string>
    <string name="account_info">THÔNG TIN TÀI KHOẢN</string>
    <string name="choose_image">Chọn ảnh</string>
    <string name="vehicle_title">PHƯƠNG TIỆN</string>
    <string name="age">tuổi</string>
    <string name="server_client_id">412382726414-crbs376n4ptumq1m930lo93l5f4rh3id.apps.googleusercontent.com</string>
    <string name="error_connect">Không thể kết nối với Server!</string>
    <string name="error_phone">Số điện thoại chưa đăng ký!</string>
    <string name="referral_title">Với mỗi tài khoản đăng kí cùng với mã giới thiệu của bạn, chúng tôi sẽ thưởng cho bạn và người được giới thiệu.</string>
    <string name="your_referral_code">Mã giới thiệu của bạn</string>
    <string name="send_referral_code">GỬI MÃ GIỚI THIỆU</string>
    <string name="send_app">GIỚI THIỆU TÀI XẾ THAM GIA DỊCH VỤ</string>
</resources>