<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="vn.ntlogistics.app.shipper.ViewModels.ConfirmVMs.ConfirmActivityViewModel"/>
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        tools:context=".Views.Activities.ConfirmCodeActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/confirm"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_toolbar"
                style="@style/AppTheme.Widget.TextView"
                android:layout_centerInParent="true" />

            <ImageView
                android:layout_width="@dimen/design_fab_image_size"
                android:layout_height="@dimen/design_fab_image_size"
                android:id="@+id/btnExit"
                android:layout_alignParentRight="true"
                android:layout_margin="5dp"
                android:src="@mipmap/ic_close_white"
                android:onClick="@{viewModel::onClickExit}"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_note"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_body"
                style="@style/AppTheme.Widget.TextView" />

            <EditText
                android:id="@+id/etConfirmCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@color/colorBG"
                android:hint="@string/confirm_code"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:padding="@dimen/padding_edittext"
                android:selectAllOnFocus="true"
                style="@style/AppTheme.Widget.EditText"
                android:onTextChanged="@{viewModel::onTextChanged}"
                android:onEditorAction="@{viewModel::onEditorSend}"
                android:maxLength="4" />

            <Button
                android:id="@+id/btActived"
                style="@style/AppTheme.Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@drawable/custom_button"
                android:text="@string/activated"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:onClick="@{viewModel::onClickConfirm}"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:id="@+id/loResend">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/mess_not_received"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textsize_body"
                    style="@style/AppTheme.Widget.TextView"
                    android:id="@+id/tvConfirmCode"
                    android:onClick="@{viewModel::onClickResend}"
                    android:visibility="gone" />

                <ProgressBar
                    android:max="100"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:id="@+id/pbConfirmCode" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</layout>

