<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <com.oneshipglobal.app.oneshippro.Util.CustomViewGroup.HeaderLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            app:tvTitle="@string/collecting_receiver"
            app:showConfirmCode="true"
            app:showCheckbox="false"
            app:tvTitleConfirm="@string/total"
            android:id="@+id/headerReceive" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_margin="5dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adress"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textsize_body"
                    style="@style/AppTheme.Widget.TextView"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textsize_body"
                    android:layout_margin="2dp"
                    style="@style/AppTheme.Widget.TextView"
                    android:layout_gravity="center_vertical" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvAddressSender"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textsize_body"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/freight_fee"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textsize_body"
                    android:layout_margin="2dp"
                    style="@style/AppTheme.Widget.TextView"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvFreightFeeSender"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/colorGrayText"
                    android:textSize="@dimen/textsize_body"
                    android:layout_margin="2dp"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/added_service_fee"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textsize_body"
                    android:layout_margin="2dp"
                    style="@style/AppTheme.Widget.TextView"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvAddedServiceFeeSender"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/colorGrayText"
                    android:textSize="@dimen/textsize_body"
                    android:layout_margin="2dp"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cod_fee"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textsize_body"
                    android:layout_margin="2dp"
                    style="@style/AppTheme.Widget.TextView"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvCODFee"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/colorGrayText"
                    android:textSize="@dimen/textsize_body"
                    android:layout_margin="2dp"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_revenue"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textsize_body"
                    android:layout_margin="2dp"
                    style="@style/AppTheme.Widget.TextView"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvColectingRevenueSender"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/colorGrayText"
                    android:textSize="@dimen/textsize_body"
                    android:layout_margin="2dp"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vat"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textsize_body"
                    android:layout_margin="2dp"
                    style="@style/AppTheme.Widget.TextView"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/tvVATReceiver"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/colorGrayText"
                    android:textSize="@dimen/textsize_body"
                    android:layout_margin="2dp"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extra_fee"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textsize_body"
                    android:layout_margin="2dp"
                    style="@style/AppTheme.Widget.TextView"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvExtraFee"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/colorGrayText"
                    android:textSize="@dimen/textsize_body"
                    android:layout_margin="2dp"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>